2001-04-12  Dan Mueth  <dan@eazel.com>

	Putting in Nautilus 1.0.1 version of docs.  The main changes
	pertain to the removal of medusa.  There is also a release
	note about mozilla 0.8.1 breaking help links in docs.	

	* help/nautilus-quick-reference/C/index.html:
	* help/nautilus-release-notes/C/nautilus-release-notes.sgml:
	* help/nautilus-user-manual/C/nautilus-user-manual.sgml:

2001-04-10  Christophe Merlet  <redfox@eikonex.org>

	* src/Nautilus_shell_oaf.in: Fix a typo.

2001-04-06  Rebecca Schulman  <rebecka@eazel.com>

	reviewed by: Don Melton <don@eazel.com>

	* help/nautilus-user-manual/C/TRACKED_CHANGES:
	* help/nautilus-user-manual/C/nautilus-user-manual.sgml:
	Remove documentation about search from the manual for now.
	Unfortunately, we were not able to get in touch with Dan Mueth
	regarding this change.  The translated copies of the edited manual
	will be changed tomorrow morning.


2001-04-05  Robin * Slomkowski  <rslomkow@eazel.com>

	* configure.in: upped version to 1.0.2 preparing for
	  release.

2001-03-30  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: John Harper  <jsh@eazel.com>

	* libnautilus-extensions/nautilus-stock-dialogs.c:
	(create_message_box):
	Make sure the label is not NULL before changing its line wrap.
	This works around the crashing problem.  Why the label is NULL is
	still a mystery.
	
2001-03-28  Robin * Slomkowski  <rslomkow@eazel.com>

	* configure.in: upped version to 1.0.1

2001-03-26  Dan Mueth  <dan@eazel.com>

	Smaller versions of screenshots which were too big to
	fit in the Nautilus main panel, by Arlo.

	* help/nautilus-quick-reference/C/figures/find.png:
	* help/nautilus-quick-reference/C/figures/full.png:
	* help/nautilus-quick-reference/C/figures/music.png:
	* help/nautilus-user-manual/C/figures/custicon.png:
	* help/nautilus-user-manual/C/figures/full.png:
	* help/nautilus-user-manual/C/figures/part.png:

2001-03-21  Ramiro Estrugo  <ramiro@eazel.com>
 
 	reviewed by: Pavel Cisler <pavel@eazel.com>
 