@@ -1333,20 +1333,7 @@
  <chapter id="chapter3">
   <title>Searching the Internet</title>
 
-  <sect1 id="toc3">
-   <title>Contents of this section:</title>
-
-   <simplelist>
-    <member><link linkend="search">Searching the Internet</link></member>
-   </simplelist>
-
-  </sect1>
-
-
   <!--  Searching Your Computer and the Internet: Searching the Internet  -->
-  <sect1 id="search">
-   <title>Searching the Internet</title>
-
    <para>
     To search for pages on the Web, click the Web Search button in the
     toolbar. Eazel's Search page appears. Type the word or phrase for
@@ -1402,7 +1389,6 @@
      </graphic>
     </screenshot>
    </figure>
-  </sect1>
 
  </chapter>
 
@@ -2588,10 +2574,12 @@
     and first in list view.
    </para>
 
+<!--
    <para>
     If you use emblems, you can also <link
     linkend="find">search</link> by emblem.
    </para>
+-->
 
   </sect1>
 
