@@ -1,5 +1,11 @@
 2001-04-12  Dan Mueth  <dan@eazel.com>
 
+	Another update to sections relating to searching.
+
+	* help/nautilus-user-manual/C/nautilus-user-manual.sgml:
+
+2001-04-12  Dan Mueth  <dan@eazel.com>
+
 	Putting in Nautilus 1.0.1 version of docs.  The main changes
 	pertain to the removal of medusa.  There is also a release
 	note about mozilla 0.8.1 breaking help links in docs.	
